# sdk-internal

./: Cargo.toml  DISCLAIMER.md  README.md  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  copilot-instructions.md  renovate.json
.github/instructions/: cargo-style.instructions.md  rust-style.instructions.md
.github/workflows/: build-android.yml  build-rust-crates.yml  build-swift.yml  build-wasm-internal.yml  check-powerset.yml  cloc.yml  direct-minimal-versions.yml  enforce-labels.yml  lint.yml  memory-testing.yml  minimum-rust-version.yml  publish-rust-crates.yml  publish-wasm-internal.yml  release-rust-crates.yml  release-swift.yml  rust-test.yml  rustdoc.yml  scan.yml  version-bump.yml
bitwarden_license/bitwarden-sm/: Cargo.toml  README.md
crates/bitwarden-api-api/: README.md
crates/bitwarden-api-identity/: README.md
crates/bitwarden-auth/: Cargo.toml  README.md
crates/bitwarden-auth/src/: auth_client.rs  lib.rs
crates/bitwarden-auth/src/send_access/: client.rs  mod.rs
crates/bitwarden-cli/: Cargo.toml  README.md
crates/bitwarden-collections/: Cargo.toml  README.md
crates/bitwarden-collections/src/: collection.rs  error.rs  lib.rs  tree.rs  uniffi_support.rs
crates/bitwarden-core/: Cargo.toml  README.md
crates/bitwarden-crypto/: Cargo.toml  README.md
crates/bitwarden-error/: Cargo.toml  README.md
crates/bitwarden-error-macro/: Cargo.toml  README.md
crates/bitwarden-error-macro/src/: lib.rs
crates/bitwarden-error-macro/src/basic/: attribute.rs
crates/bitwarden-error-macro/src/flat/: attribute.rs
crates/bitwarden-error-macro/src/full/: attribute.rs
crates/bitwarden-exporters/: Cargo.toml  README.md
crates/bitwarden-exporters/src/: error.rs  export.rs  exporter_client.rs  lib.rs  models.rs
crates/bitwarden-exporters/src/cxf/: api_key.rs  card.rs  editable_field.rs  export.rs  import.rs  login.rs  mod.rs  wifi.rs
crates/bitwarden-fido/: Cargo.toml  README.md
crates/bitwarden-generators/: Cargo.toml  README.md
crates/bitwarden-generators/src/: generator_client.rs  lib.rs  passphrase.rs  password.rs  username.rs
crates/bitwarden-generators/src/username_forwarders/: simplelogin.rs
crates/bitwarden-ipc/: Cargo.toml  README.md
crates/bitwarden-ipc/src/: constants.rs  endpoint.rs  error.rs  ipc_client.rs  lib.rs  message.rs  serde_utils.rs
crates/bitwarden-ipc/src/discover/: mod.rs
crates/bitwarden-ipc/src/rpc/: error.rs  mod.rs  request.rs  request_message.rs  response_message.rs
crates/bitwarden-ipc/src/rpc/exec/: error.rs  handler.rs  handler_registry.rs  mod.rs
crates/bitwarden-ipc/src/traits/: communication_backend.rs  crypto_provider.rs  mod.rs  session_repository.rs
crates/bitwarden-ipc/src/wasm/: communication_backend.rs  discover.rs  error.rs  ipc_client.rs  message.rs  mod.rs
crates/bitwarden-send/: Cargo.toml  README.md
crates/bitwarden-ssh/: Cargo.toml  README.md
crates/bitwarden-state/: Cargo.toml  README.md
crates/bitwarden-state/src/: lib.rs  registry.rs  repository.rs
crates/bitwarden-test/: Cargo.toml  README.md
crates/bitwarden-test/src/: api.rs  lib.rs  repository.rs
crates/bitwarden-threading/: Cargo.toml  README.md
crates/bitwarden-threading/src/: cancellation_token.rs  lib.rs  thread_bound_runner.rs  time.rs
crates/bitwarden-threading/tests/: mod.rs  wasm.rs
crates/bitwarden-threading/tests/cancellation_token/: wasm.rs
crates/bitwarden-threading/tests/thread_bound_runner/: standard_tokio.rs  wasm.rs
crates/bitwarden-uniffi/: Cargo.toml  README.md
crates/bitwarden-uniffi/kotlin/: build.gradle  publish-local.sh
crates/bitwarden-uniffi/kotlin/app/: build.gradle
crates/bitwarden-uniffi/kotlin/app/src/main/java/com/bitwarden/myapplication/: MainActivity.kt
crates/bitwarden-uniffi/kotlin/gradle/wrapper/: gradle-wrapper.properties
crates/bitwarden-uniffi/kotlin/sdk/: build.gradle
crates/bitwarden-uniffi/src/: android_support.rs  crypto.rs  error.rs  lib.rs  uniffi_support.rs
crates/bitwarden-uniffi/src/auth/: mod.rs
crates/bitwarden-uniffi/src/platform/: fido2.rs  mod.rs  repository.rs
crates/bitwarden-uniffi/src/tool/: mod.rs  sends.rs  ssh.rs
crates/bitwarden-uniffi/src/vault/: attachments.rs  ciphers.rs  collections.rs  folders.rs  mod.rs  password_history.rs
crates/bitwarden-uniffi/swift/iOS/App/: ContentView.swift
crates/bitwarden-uniffi/swift/iOS/App.xcodeproj/xcshareddata/xcschemes/: App.xcscheme
crates/bitwarden-uuid/: Cargo.toml  README.md
crates/bitwarden-uuid-macro/: Cargo.toml  README.md
crates/bitwarden-uuid-macro/src/: lib.rs
crates/bitwarden-uuid/src/: lib.rs
crates/bitwarden-uuid/tests/: uuid.rs
crates/bitwarden-vault/: Cargo.toml  README.md
crates/bitwarden-vault/src/: collection.rs  collection_client.rs  domain.rs  error.rs  folder.rs  folder_client.rs  lib.rs  password_history.rs  password_history_client.rs  sync.rs  totp.rs  totp_client.rs  uniffi_support.rs  vault_client.rs
crates/bitwarden-vault/src/cipher/: attachment.rs  attachment_client.rs  card.rs  cipher.rs  cipher_client.rs  cipher_permissions.rs  field.rs  identity.rs  linked_id.rs  local_data.rs  login.rs  mod.rs  secure_note.rs  ssh_key.rs
crates/bitwarden-vault/src/folder/: create.rs  edit.rs  folder_client.rs  folder_models.rs  get_list.rs  mod.rs
crates/bitwarden-vault/src/mobile/: attachment_client.rs  cipher_client.rs  collection_client.rs  folder_client.rs  mod.rs  password_history_client.rs
crates/bitwarden-wasm-internal/: Cargo.toml  README.md  build.rs  build.sh
crates/bitwarden-wasm-internal/npm/: package-lock.json  package.json
crates/bitwarden-wasm-internal/src/: client.rs  crypto.rs  custom_types.rs  generators.rs  init.rs  lib.rs  pure_crypto.rs  ssh.rs
crates/bitwarden-wasm-internal/src/platform/: mod.rs  repository.rs  token_provider.rs
crates/bitwarden-wasm-internal/src/vault/: attachments.rs  ciphers.rs  folders.rs  mod.rs  totp.rs
crates/bw/: Cargo.toml  README.md
crates/memory-testing/: Cargo.toml  Dockerfile  Dockerfile.dockerignore
crates/uniffi-bindgen/: Cargo.toml
(+389 files in other folders)
