[package]
name = "bitwarden-auth"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
uniffi = ["bitwarden-core/uniffi", "dep:uniffi"] # Uniffi bindings
wasm = [
    "bitwarden-core/wasm",
    "dep:tsify",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures"
] # WASM support

[dependencies]
bitwarden-core = { workspace = true, features = ["internal"] }
bitwarden-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[lints]
workspace = true
