[package]
name = "bitwarden-exporters"
description = """
Internal crate for the bitwarden crate. Do not use.
"""
exclude = ["/resources"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
uniffi = ["dep:uniffi", "bitwarden-core/uniffi"] # Uniffi bindings
wasm = [
    "bitwarden-vault/wasm",
    "dep:tsify",
    "dep:wasm-bindgen"
] # WebAssembly bindings

[dependencies]
base64 = ">=0.22.1, <0.23"
bitwarden-collections = { workspace = true, features = ["wasm"] }
bitwarden-core = { workspace = true }
bitwarden-crypto = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-fido = { workspace = true }
bitwarden-vault = { workspace = true }
chrono = { workspace = true, features = ["std"] }
credential-exchange-format = ">=0.1, <0.2"
csv = "1.3.0"
num-traits = ">=0.2, <0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[lints]
workspace = true
