[package]
name = "bitwarden-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
wasm = [
    "dep:tsify-next",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "bitwarden-error/wasm",
    "bitwarden-threading/wasm"
] # WASM support

[dependencies]
async-trait = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-threading = { workspace = true }
erased-serde = ">=0.4.6, <0.5"
js-sys = { workspace = true, optional = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { features = ["sync", "time", "rt"], workspace = true }
tsify-next = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[lints]
workspace = true
