[package]
name = "bitwarden-threading"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
bitwarden-error = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { features = ["sync", "time", "rt"], workspace = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
js-sys = { workspace = true }
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
async-trait = "0.1.88"
console_error_panic_hook = "0.1.7"
js-sys = { workspace = true }
tsify-next = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
