[package]
name = "bitwarden-uniffi"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[dependencies]
async-trait = { workspace = true }
bitwarden-core = { workspace = true, features = ["uniffi"] }
bitwarden-crypto = { workspace = true, features = ["uniffi"] }
bitwarden-exporters = { workspace = true, features = ["uniffi"] }
bitwarden-fido = { workspace = true, features = ["uniffi"] }
bitwarden-generators = { workspace = true, features = ["uniffi"] }
bitwarden-send = { workspace = true, features = ["uniffi"] }
bitwarden-ssh = { workspace = true, features = ["uniffi"] }
bitwarden-state = { workspace = true, features = ["uniffi"] }
bitwarden-vault = { workspace = true, features = ["uniffi"] }
chrono = { workspace = true, features = ["std"] }
env_logger = "0.11.1"
log = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

# The use of rustls-platform-verifier requires some extra support to communicate with the Android platform
jni = ">=0.21, <0.22"
libloading = ">=0.8.1, <0.9"
rustls-platform-verifier = "0.6.0"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lints]
workspace = true
