[package]
name = "bitwarden-uuid-macro"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true
