[package]
name = "bitwarden-uuid"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
bitwarden-uuid-macro = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
